// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CriterionContainer /> renders default 1`] = `
<Form.Group>
  <Form.Label
    className="criteria-label"
  >
    <span
      className="criteria-title"
    >
      criterionName
    </span>
    <InfoPopover>
      <div
        className="help-popover-option"
      >
        description
      </div>
      <hr />
      <div
        className="help-popover-option"
        key="option1"
      >
        <strong>
          Option 1
        </strong>
        <br />
        description1
      </div>
      <div
        className="help-popover-option"
        key="option2"
      >
        <strong>
          Option 2
        </strong>
        <br />
        description2
      </div>
    </InfoPopover>
  </Form.Label>
  <div
    className="rubric-criteria"
  >
    <div
      data-testid="input"
    >
      input
    </div>
  </div>
  <div
    data-testid="feedback"
  >
    feedback
  </div>
</Form.Group>
`;

exports[`<CriterionContainer /> renders without input and feedback 1`] = `
<Form.Group>
  <Form.Label
    className="criteria-label"
  >
    <span
      className="criteria-title"
    >
      criterionName
    </span>
    <InfoPopover>
      <div
        className="help-popover-option"
      >
        description
      </div>
      <hr />
      <div
        className="help-popover-option"
        key="option1"
      >
        <strong>
          Option 1
        </strong>
        <br />
        description1
      </div>
      <div
        className="help-popover-option"
        key="option2"
      >
        <strong>
          Option 2
        </strong>
        <br />
        description2
      </div>
    </InfoPopover>
  </Form.Label>
  <div
    className="rubric-criteria"
  />
</Form.Group>
`;
